Made it responsive on tablet, background image still having issues tho

--- a/space_tourism/src/App.css
+++ b/space_tourism/src/App.css
@@ -9,6 +9,10 @@ body {
   margin: 0;
   padding: 0;
 }
+.home {
+  height: inherit;
+  width: inherit;
+}
 /* article {
   border: 1px solid red;
 } */
